--- a/angular-client/src/styles.scss
+++ b/angular-client/src/styles.scss
@@ -1,2 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+body{
+  padding:0;
+  margin:0;
+
+}
+
+.material-icons.md-48 { font-size: 48px; }
+
+.main-container{
+  padding:15px;
+}
+
+mat-sidenav-container{
+  min-height:100vh;
+}
