--- a/angular-client/src/app/login/login.component.html
+++ b/angular-client/src/app/login/login.component.html
@@ -1,3 +1,17 @@
-<p>
-  login works!
-</p>
+<form class="log-form" [formGroup]="loginForm">
+
+  <mat-form-field class="log-form-full-field">
+    <input matInput placeholder="Email" formControlName="email" required>
+    <mat-error *ngIf="!loginForm.controls.email.valid">Incorrect email address</mat-error>
+  </mat-form-field>
+
+  <mat-form-field class="log-form-full-field">
+    <input matInput type="password" placeholder="Password" formControlName="password" required>
+    <mat-error *ngIf="!loginForm.controls.password.valid">Password is required</mat-error>
+  </mat-form-field>
+
+  <button mat-raised-button color="primary" [disabled]="!loginForm.valid" (click)="login()">
+    Login
+  </button>
+
+</form>
