--- a/angular-client/src/styles.scss
+++ b/angular-client/src/styles.scss
@@ -4,8 +4,12 @@
 body{
   padding:0;
   margin:0;
-
 }
+
+a {
+   outline: 0;
+}
+
 
 .material-icons.md-48 { font-size: 48px; }
 
@@ -16,4 +20,8 @@ body{
 
 mat-sidenav-container{
   min-height:100vh;
+}
+
+agm-map{
+  height: 350px;
 }
