--- a/angular-client/src/app/navbar/navbar.component.html
+++ b/angular-client/src/app/navbar/navbar.component.html
@@ -13,7 +13,7 @@
       <button mat-menu-item *ngIf="!ifLogged()" routerLink="/register">Register</button>
       <button mat-menu-item *ngIf="!ifLogged()" routerLink="/login">Login</button>
       <button mat-menu-item routerLink="/">hoome</button>
-      <button mat-menu-item routerLink="/myplaces">myplaces</button>
+      <button mat-menu-item *ngIf="ifLogged()" routerLink="/myplaces">myplaces</button>
 
     </mat-menu>
 
