--- a/angular-client/src/app/my-places/my-places/my-places.component.html
+++ b/angular-client/src/app/my-places/my-places/my-places.component.html
@@ -6,12 +6,12 @@
   <agm-marker *ngFor = "let m of myplaces"
     [latitude] = "m.lat"
     [longitude] = "m.lng"
-    [label]="m.description"
+    [label]="m.description">
   </agm-marker>
 
 </agm-map>
 <section >
-  <button mat-fab color="primary">
+  <button mat-fab color="primary" (click)="setAddState()">
     <mat-icon class="material-icons">add</mat-icon>
   </button>
 </section>
