--- a/angular-client/src/app/my-places/place-list/place-list.component.html
+++ b/angular-client/src/app/my-places/place-list/place-list.component.html
@@ -1,9 +1,10 @@
-<mat-nav-list>
-
+<mat-list>
+  <h3 mat-subheader>My Places</h3>
   <mat-list-item *ngFor="let place of places">
-    <p>{{place.description}}</p>
-    <mat-divider></mat-divider>
+    <mat-icon mat-list-icon>room</mat-icon>
+    <!-- <h4 mat-line>{{place.title}}</h4> -->
+    <h4 mat-line>Name of place</h4>
+    <p mat-line> {{place.description}} </p>
   </mat-list-item>
-
   <mat-divider></mat-divider>
-</mat-nav-list>
+</mat-list>
