--- a/angular-client/src/app/navbar/navbar.component.html
+++ b/angular-client/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" class="mat-elevation-z6">
+<mat-toolbar color="primary" class="main-nav mat-elevation-z4">
 
     <button mat-mini-fab class="tlb-name" color="primary" (click)="onClick()">
       <i class="material-icons">menu</i>
