--- a/angular-client/src/styles.scss
+++ b/angular-client/src/styles.scss
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 body{
@@ -14,8 +13,12 @@ a {
 .material-icons.md-48 { font-size: 48px; }
 
 .main-container{
-  padding:15px;
-  min-height: 79vh;
+  // padding:15px;
+  min-height: 82vh;
+}
+.main-nav{
+  position:relative;
+  z-index: 100;
 }
 
 mat-sidenav-container{
