place model changed / name,category added (front+back)

--- a/angular-client/src/app/my-places/my-places/my-places.component.html
+++ b/angular-client/src/app/my-places/my-places/my-places.component.html
@@ -18,7 +18,7 @@
     <agm-marker *ngFor = "let m of myplaces"
       [latitude] = "m.lat"
       [longitude] = "m.lng"
-      [label]="m.description">
+      [label]="m.name">
     </agm-marker>
   </agm-map>
 
