--- a/angular-client/src/app/my-places/add-modal/add-modal.component.html
+++ b/angular-client/src/app/my-places/add-modal/add-modal.component.html
@@ -5,6 +5,12 @@
   <mat-form-field>
     <input matInput [(ngModel)]="newPlaceDescr" placeholder="description">
   </mat-form-field>
+  <mat-form-field>
+    <input matInput [(ngModel)]="newPlaceName" placeholder="name">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput [(ngModel)]="newPlaceCat" placeholder="category">
+  </mat-form-field>
 
   <div class="">
     <button mat-raised-button (click)="close()">CANCEL</button>
