--- a/angular-client/src/app/my-places/place-list/place-list.component.html
+++ b/angular-client/src/app/my-places/place-list/place-list.component.html
@@ -2,9 +2,9 @@
   <h3 mat-subheader>My Places</h3>
   <mat-list-item *ngFor="let place of places">
     <mat-icon mat-list-icon>room</mat-icon>
-    <!-- <h4 mat-line>{{place.title}}</h4> -->
-    <h4 mat-line>Name of place</h4>
+    <h4 mat-line>{{place.name}}</h4>
     <p mat-line> {{place.description}} </p>
+    <p>{{place.category}}</p>
   </mat-list-item>
   <mat-divider></mat-divider>
 </mat-list>
