delete place functionality and confirmator added (front)

--- a/angular-client/src/app/my-places/add-modal/add-modal.component.html
+++ b/angular-client/src/app/my-places/add-modal/add-modal.component.html
@@ -1,12 +1,12 @@
 
-<div class="mat-typography">
+<div class="mat-typography addmodal">
   <h2>{{data.descr}}</h2>
   <p>add new place description</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="newPlaceDescr" placeholder="description">
+    <input matInput [(ngModel)]="newPlaceName" placeholder="name">
   </mat-form-field>
   <mat-form-field>
-    <input matInput [(ngModel)]="newPlaceName" placeholder="name">
+    <input matInput [(ngModel)]="newPlaceDescr" placeholder="description">
   </mat-form-field>
   <mat-form-field>
     <input matInput [(ngModel)]="newPlaceCat" placeholder="category">
