--- a/angular-client/src/app/my-places/place-list/place-list.component.html
+++ b/angular-client/src/app/my-places/place-list/place-list.component.html
@@ -5,6 +5,14 @@
     <h4 mat-line>{{place.name}}</h4>
     <p mat-line> {{place.description}} </p>
     <p>{{place.category}}</p>
+
+    <mat-menu #appMenu="matMenu" xPosition="before">
+      <button mat-menu-item>Edit</button>
+      <button mat-menu-item (click)="removePlace(place)">Delete</button>
+    </mat-menu>
+    <button mat-icon-button [matMenuTriggerFor]="appMenu">
+      <mat-icon>more_vert</mat-icon>
+    </button>
   </mat-list-item>
   <mat-divider></mat-divider>
 </mat-list>
