--- a/angular-client/src/app/login/login.component.scss
+++ b/angular-client/src/app/login/login.component.scss
@@ -1,12 +1,14 @@
-.log-form{
+.log-form {
   min-width: 150px;
-  width: 100%;
+  // width: 100%;
+  padding: 10px;
 
-  .log-form-full-field{
+  .log-form-full-field {
     width: 100%;
   }
-  button{
-    margin-top:20px;
+
+  button {
+    margin-top: 20px;
   }
 
 }
