--- a/angular-client/src/app/register/register.component.scss
+++ b/angular-client/src/app/register/register.component.scss
@@ -1,11 +1,13 @@
-.reg-form{
+.reg-form {
   min-width: 150px;
-  width: 100%;
+  // width: 100%;
+  padding: 10px;
 
-  .reg-form-full-field{
+  .reg-form-full-field {
     width: 100%;
   }
-  button{
-    margin-top:20px;
+
+  button {
+    margin-top: 20px;
   }
 }
