--- a/angular-client/src/styles.scss
+++ b/angular-client/src/styles.scss
@@ -1,8 +1,8 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-body{
-  padding:0;
-  margin:0;
+body {
+  padding: 0;
+  margin: 0;
 }
 
 a {
@@ -10,21 +10,24 @@ a {
 }
 
 
-.material-icons.md-48 { font-size: 48px; }
+.material-icons.md-48 {
+  font-size: 48px;
+}
 
-.main-container{
+.main-container {
   // padding:15px;
   min-height: 82vh;
 }
-.main-nav{
-  position:relative;
+
+.main-nav {
+  position: relative;
   z-index: 100;
 }
 
-mat-sidenav-container{
-  min-height:100vh;
+mat-sidenav-container {
+  min-height: 100vh;
 }
 
-agm-map{
+agm-map {
   height: 400px;
 }
