--- a/angular-client/src/app/user-panel/user-panel.component.html
+++ b/angular-client/src/app/user-panel/user-panel.component.html
@@ -1,10 +1,6 @@
 <div class="sidepanel">
   <mat-toolbar color="primary" class="mat-elevation-z6">
-    <h3>Your panel</h3>
+    <h4>Your panel</h4>
   </mat-toolbar>
 </div>
-<mat-list>
-  <mat-list-item> Places </mat-list-item>
-  <mat-list-item> Your account </mat-list-item>
-  <mat-list-item> Others </mat-list-item>
-</mat-list>
+<router-outlet></router-outlet>
