--- a/angular-client/src/app/user-panel/user-panel-list/user-panel-list.component.html
+++ b/angular-client/src/app/user-panel/user-panel-list/user-panel-list.component.html
@@ -1,3 +1,6 @@
+<mat-toolbar color="primary" class="mat-elevation-z6">
+  <h4>Your panel</h4>
+</mat-toolbar>
 <mat-list>
   <mat-list-item routerLink="/profile/places"> Places </mat-list-item>
   <mat-list-item> Your account </mat-list-item>
