--- a/angular-client/src/app/user-panel/places-set/places-set.component.html
+++ b/angular-client/src/app/user-panel/places-set/places-set.component.html
@@ -1,3 +1,4 @@
-<p>
-  places-set works!
-</p>
+<mat-toolbar color="primary" class="mat-elevation-z6 pointer" routerLink="../">
+  <i class="material-icons icon-marg-r">keyboard_backspace</i>
+  <h4>back to User Panel</h4>
+</mat-toolbar>
