footer content and stles added

--- a/angular-client/src/app/footer/footer.component.html
+++ b/angular-client/src/app/footer/footer.component.html
@@ -1,9 +1,9 @@
 <footer>
-  <mat-toolbar color="primary" class="my-toolbar">
-    <mat-toolbar-row>
-      <span>SuperFooter</span>
-      <span>SuperFooter</span>
-      <span>SuperFooter</span>
+  <mat-toolbar color="primary">
+    <mat-toolbar-row class="my-toolbar mat-h4">
+      <span>Mapper</span>
+      <span>Version 1.0</span>
+      <span><a href="https://github.com/GrzegorzJarosz/mapper" class="link-nostyle">GitHub</a></span>
     </mat-toolbar-row>
   </mat-toolbar>
 </footer>
