--- a/angular-client/src/styles.scss
+++ b/angular-client/src/styles.scss
@@ -9,6 +9,11 @@ a {
   outline: 0;
 }
 
+.link-nostyle {
+  color: inherit;
+  text-decoration: none;
+}
+
 
 .material-icons.md-48 {
   font-size: 48px;
