user panel basic routing added

--- a/angular-client/src/app/my-places/my-places/my-places.component.html
+++ b/angular-client/src/app/my-places/my-places/my-places.component.html
@@ -7,7 +7,7 @@
     </mat-card-actions>
   </mat-card>
 
-  <div>
+  <div class="sidepanel">
     <mat-toolbar color="primary" class="mat-elevation-z6">
       <h3>My places</h3>
       <button mat-mini-fab color="primary" (click)="setAddState()">
