--- a/angular-client/src/app/user-panel/set_places/places-cat-edit/places-cat-edit.component.html
+++ b/angular-client/src/app/user-panel/set_places/places-cat-edit/places-cat-edit.component.html
@@ -1,4 +1,4 @@
 <mat-toolbar color="primary" class="mat-elevation-z6 pointer" routerLink="../">
   <i class="material-icons icon-marg-r">keyboard_backspace</i>
-  <h4>back to User Panel</h4>
+  <h4>back to Places</h4>
 </mat-toolbar>
