--- a/angular-client/src/app/user-panel/user-panel-list/user-panel-list.component.html
+++ b/angular-client/src/app/user-panel/user-panel-list/user-panel-list.component.html
@@ -2,7 +2,7 @@
   <h4>Your panel</h4>
 </mat-toolbar>
 <mat-list>
-  <mat-list-item routerLink="/profile/places"> Places </mat-list-item>
+  <mat-list-item routerLink="places"> Places</mat-list-item>
   <mat-list-item> Your account </mat-list-item>
   <mat-list-item> Others </mat-list-item>
 </mat-list>
