confirmator moved to app dir

--- a/angular-client/src/app/confirmator/confirmator.component.html
+++ b/angular-client/src/app/confirmator/confirmator.component.html
@@ -3,6 +3,9 @@
   <p>Are you sure?</p>
   <div class="">
     <button mat-raised-button (click)="close()">CANCEL</button>
-    <button mat-raised-button (click)="removePlace()">ACCEPT</button>
+    <!-- <button mat-raised-button (click)="removePlace()">ACCEPT</button> -->
+    <button mat-raised-button (click)="accept()">ACCEPT</button>
+
   </div>
+
 </div>
