--- a/angular-client/src/app/user-panel/set_places/places-set/places-set.component.html
+++ b/angular-client/src/app/user-panel/set_places/places-set/places-set.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar color="primary" class="mat-elevation-z6 pointer" routerLink="../">
-  <i class="material-icons icon-marg-r">keyboard_backspace</i>
+<mat-toolbar color="primary" class="mat-elevation-z6 ">
+  <i class="material-icons icon-marg-r" routerLink="../">keyboard_backspace</i>
   <h4>back to User Panel</h4>
 </mat-toolbar>
 
