--- a/angular-client/src/app/user-panel/set_places/places-cat-edit/places-cat-edit.component.html
+++ b/angular-client/src/app/user-panel/set_places/places-cat-edit/places-cat-edit.component.html
@@ -13,7 +13,7 @@
       <h4 mat-line>{{cat.name}}</h4>
       <mat-menu #appMenu="matMenu" xPosition="before">
         <button mat-menu-item>Edit</button>
-        <button mat-menu-item (click)="removeCatPlace(cat._id, cat.name)">Delete</button>
+        <button mat-menu-item (click)="openConfirmator(cat)">Delete</button>
       </mat-menu>
       <button mat-icon-button [matMenuTriggerFor]="appMenu">
         <mat-icon>more_vert</mat-icon>
