add placescategories functionality added

--- a/angular-client/src/app/my-places/add-modal/add-modal.component.html
+++ b/angular-client/src/app/my-places/add-modal/add-modal.component.html
@@ -1,4 +1,3 @@
-
 <div class="mat-typography addmodal">
   <h2>{{data.descr}}</h2>
   <p>add new place description</p>
@@ -12,7 +11,7 @@
     <input matInput [(ngModel)]="newPlaceCat" placeholder="category">
   </mat-form-field>
 
-  <div class="">
+  <div>
     <button mat-raised-button (click)="close()">CANCEL</button>
     <button mat-raised-button (click)="addPlace()">ACCEPT</button>
   </div>
