--- a/angular-client/src/app/my-places/add-modal/add-modal.component.html
+++ b/angular-client/src/app/my-places/add-modal/add-modal.component.html
@@ -8,7 +8,10 @@
     <input matInput [(ngModel)]="newPlaceDescr" placeholder="description">
   </mat-form-field>
   <mat-form-field>
-    <input matInput [(ngModel)]="newPlaceCat" placeholder="category">
+    <mat-label>category</mat-label>
+    <mat-select [(ngModel)]="newPlaceCat">
+      <mat-option *ngFor="let cat of existCatPlaces" [value]="cat.name">{{cat.name}}</mat-option>
+    </mat-select>
   </mat-form-field>
 
   <div>
