--- a/angular-client/src/app/user-panel/set_places/places-cat-edit/places-cat-edit.component.html
+++ b/angular-client/src/app/user-panel/set_places/places-cat-edit/places-cat-edit.component.html
@@ -11,12 +11,8 @@
     <h3 mat-subheader>categories list</h3>
     <mat-list-item *ngFor="let cat of categories">
       <h4 mat-line>{{cat.name}}</h4>
-      <mat-menu #appMenu="matMenu" xPosition="before">
-        <button mat-menu-item>Edit</button>
-        <button mat-menu-item (click)="openConfirmator(cat)">Delete</button>
-      </mat-menu>
-      <button mat-icon-button [matMenuTriggerFor]="appMenu">
-        <mat-icon>more_vert</mat-icon>
+      <button mat-icon-button (click)="openConfirmator(cat)">
+        <i class="material-icons">delete</i>
       </button>
     </mat-list-item>
   </mat-list>
