some 404 and 404style improvement

--- a/angular-client/src/app/not-found/not-found.component.html
+++ b/angular-client/src/app/not-found/not-found.component.html
@@ -1,3 +1,6 @@
-<p>
-  not-found works!
-</p>
+<div class="mat-typography aligner-cont">
+  <div>
+    <p class="mat-display-4">404</p>
+    <span class="mat-display-1">NOT FOUND</span>
+  </div>
+</div>
