--- a/angular-client/src/app/navbar/navbar.component.html
+++ b/angular-client/src/app/navbar/navbar.component.html
@@ -19,7 +19,7 @@
     <i class="material-icons md-48">account_circle</i>
   </button>
   <mat-menu #Usermenu="matMenu">
-    <button mat-button>-- hello {{user}} --</button>
+    <button mat-button>hello {{user}}</button>
     <button mat-menu-item routerLink="/profile">UserPanel</button>
     <button mat-menu-item *ngIf="ifLogged()" (click)="onLogout()">LogOut</button>
   </mat-menu>
