--- a/angular-client/src/app/my-places/place-list/place-list.component.html
+++ b/angular-client/src/app/my-places/place-list/place-list.component.html
@@ -1,5 +1,6 @@
 <mat-list>
   <h3 mat-subheader>My Places</h3>
+  <mat-list-item *ngIf="hasList()">You have no places..</mat-list-item>
   <mat-list-item (click)="onPlaceSelect(place)" *ngFor="let place of places">
     <mat-icon mat-list-icon>room</mat-icon>
     <h4 mat-line>{{place.name}}</h4>
