myplaces rebuilded - map & list separated

--- a/angular-client/src/app/my-places/my-places/my-places.component.html
+++ b/angular-client/src/app/my-places/my-places/my-places.component.html
@@ -14,17 +14,9 @@
         <mat-icon class="material-icons">add</mat-icon>
       </button>
     </mat-toolbar>
-
-    <app-place-list *ngIf="myplaces" [places]="myplaces" (placeSel)="onPlaceSelected($event)"
-      (refreshMap)="loadMyPlaces()">
-    </app-place-list>
+    <app-place-list></app-place-list>
   </div>
 
-  <agm-map [latitude]="currentZoom.lat" [longitude]="currentZoom.lng" [zoom]="currentZoom.zoom"
-    (mapClick)="onChoseLocation($event)">
-
-    <agm-marker *ngFor="let m of myplaces" [latitude]="m.lat" [longitude]="m.lng" [label]="m.name">
-    </agm-marker>
-  </agm-map>
+  <app-map></app-map>
 
 </div>
