--- a/angular-client/src/app/my-places/add-modal/add-modal.component.html
+++ b/angular-client/src/app/my-places/add-modal/add-modal.component.html
@@ -1,6 +1,41 @@
 <div class="mat-typography addmodal">
   <h2>{{data.descr}}</h2>
   <p>add new place description</p>
+
+  <form class="add-modal" [formGroup]="addModalForm">
+
+    <mat-form-field>
+      <input matInput placeholder="name" formControlName="newPlaceName" required>
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="short description" formControlName="newPlaceShortDescr" required>
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="description" formControlName="newPlaceDescr" required>
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>category</mat-label>
+      <mat-select formControlName="newPlaceCat" required>
+        <mat-option value="None">None</mat-option>
+        <mat-option *ngFor="let cat of existCatPlaces" [value]="cat.name">{{cat.name}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <div>
+      <button mat-raised-button (click)="close()">CANCEL</button>
+      <button mat-raised-button (click)="addPlace()" [disabled]="!addModalForm.valid">ACCEPT</button>
+    </div>
+  </form>
+</div>
+
+
+
+
+
+
+<!-- <div class="mat-typography addmodal">
+  <h2>{{data.descr}}</h2>
+  <p>add new place description</p>
   <mat-form-field>
     <input matInput [(ngModel)]="newPlaceName" placeholder="name">
   </mat-form-field>
@@ -10,6 +45,7 @@
   <mat-form-field>
     <mat-label>category</mat-label>
     <mat-select [(ngModel)]="newPlaceCat">
+      <mat-option value="None">None</mat-option>
       <mat-option *ngFor="let cat of existCatPlaces" [value]="cat.name">{{cat.name}}</mat-option>
     </mat-select>
   </mat-form-field>
@@ -18,4 +54,4 @@
     <button mat-raised-button (click)="close()">CANCEL</button>
     <button mat-raised-button (click)="addPlace()">ACCEPT</button>
   </div>
-</div>
+</div> -->
