--- a/angular-client/src/app/my-places/place-list/place-list.component.html
+++ b/angular-client/src/app/my-places/place-list/place-list.component.html
@@ -4,7 +4,7 @@
   <mat-list-item *ngFor="let place of myPlaces" (click)="onPlaceSelect(place)">
     <mat-icon mat-list-icon>room</mat-icon>
     <h4 mat-line>{{place.name}}</h4>
-    <p mat-line> {{place.description}} </p>
+    <p mat-line> {{place.shortDescr}} </p>
     <p>{{place.category}}</p>
 
     <mat-menu #appMenu="matMenu" xPosition="before">
