--- a/angular-client/src/app/app.component.html
+++ b/angular-client/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-navbar></app-navbar>
-<div class="main-container">
-  <router-outlet></router-outlet>
+<div class="container">
+  <app-navbar></app-navbar>
+  <div class="main-container">
+    <router-outlet></router-outlet>
+  </div>
+  <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
