--- a/angular-client/src/app/my-places/map/map.component.scss
+++ b/angular-client/src/app/my-places/map/map.component.scss
@@ -2,3 +2,17 @@
   margin-bottom: 6px;
   font-size: 1.2em;
 }
+
+agm-map {
+  height: 100%;
+}
+
+@media (max-width: 666px) {
+  .map-box {
+    height: 100%;
+  }
+
+  agm-map {
+    height: 100%;
+  }
+}
