--- a/angular-client/src/app/my-places/my-places/my-places.component.scss
+++ b/angular-client/src/app/my-places/my-places/my-places.component.scss
@@ -1,18 +1,16 @@
 .mypl-container {
-  position: relative;
   display: flex;
-  flex-direction: row;
-  height: 400px;
+  height: 100%;
 }
 
 app-map {
   flex: 3;
 }
 
-.sidepanel {
-  // flex: 2;
-  overflow: auto;
 
+.sidepanel {
+  flex: 2;
+  height: 100%;
 
   mat-toolbar {
     display: flex;
@@ -28,4 +26,28 @@ app-map {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  p {
+    margin: 10px 0 0 0;
+  }
+}
+
+@media (max-width: 666px) {
+  .mypl-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+
+  app-map {
+    order: -1;
+    flex: 1;
+    min-height: 100px;
+  }
+
+  .sidepanel {
+    flex: 0 1 auto;
+    height: auto;
+  }
+
 }
