--- a/angular-client/src/styles.scss
+++ b/angular-client/src/styles.scss
@@ -3,6 +3,7 @@
 body {
   padding: 0;
   margin: 0;
+  height: 100%;
 }
 
 a {
@@ -19,9 +20,6 @@ a {
   font-size: 48px;
 }
 
-.main-container {
-  min-height: 82vh;
-}
 
 .main-nav {
   position: relative;
@@ -32,9 +30,7 @@ mat-sidenav-container {
   min-height: 100vh;
 }
 
-agm-map {
-  height: 400px;
-}
+agm-map {}
 
 .pointer {
   cursor: pointer;
