--- a/angular-client/src/app/my-places/place-list/place-list.component.html
+++ b/angular-client/src/app/my-places/place-list/place-list.component.html
@@ -8,7 +8,7 @@
     <p>{{place.category}}</p>
 
     <mat-menu #appMenu="matMenu" xPosition="before">
-      <button mat-menu-item>Edit</button>
+      <button mat-menu-item (click)="openEditModal(place)">Edit</button>
       <button mat-menu-item (click)="openConfirmator(place)">Delete</button>
     </mat-menu>
     <button mat-icon-button [matMenuTriggerFor]="appMenu">
