--- a/angular-client/src/app/my-places/add-modal/add-modal.component.html
+++ b/angular-client/src/app/my-places/add-modal/add-modal.component.html
@@ -11,7 +11,7 @@
       <input matInput placeholder="short description" formControlName="newPlaceShortDescr" required>
     </mat-form-field>
     <mat-form-field>
-      <input matInput placeholder="description" formControlName="newPlaceDescr" required>
+      <textarea matInput placeholder="description" formControlName="newPlaceDescr" required></textarea>
     </mat-form-field>
     <mat-form-field>
       <mat-label>category</mat-label>
